@@ -22,6 +22,9 @@ NEW FEATURES
   model, multidimensional IRT with discrete traits, DINA models, etc. See
   the examples and documentation for details
 
+  - the S-X2 statistic available in `itemfit()` has been generalized to
+  include multidimensional models
+
 BUG FIXES
 
   - fixed bug in `bfactor()` starting values when NAs were specified in the
